--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,26 @@ $RECYCLE.BIN/
 
 # IntelliJ
 .idea
+
+### Go ###
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+### Go Patch ###
+/vendor/
+/Godeps/
+
+aws-keyhub
