--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Release tag
-on: [push]
+on:
+  push:
+    tags:
+      - '*'
 jobs:
   Relase-tag:
     runs-on: ubuntu-latest
@@ -8,14 +11,15 @@ jobs:
     - uses: actions/setup-go@v2
       with:
         go-version: '^1.17.0'
-    - run: GOOS=linux GOARCH=amd64 go build -o release/linux-amd64/aws-keyhub
-    - run: GOOS=windows GOARCH=amd64 go build -o release/windows-amd64/aws-keyhub
-    - run: GOOS=darwin GOARCH=amd64 go build -o release/darwin-amd64/aws-keyhub
-    - run: GOOS=darwin GOARCH=arm64 go build -o release/darwin-arm64/aws-keyhub
+    - run: mkdir -p release/
+    - run: GOOS=linux GOARCH=amd64 go build -o build/linux-amd64/aws-keyhub && zip -j release/aws-keyhub-linux-amd64.zip build/linux-amd64/*
+    - run: GOOS=windows GOARCH=amd64 go build -o build/windows-amd64/aws-keyhub.exe && zip -j release/aws-keyhub-windows-amd64.zip build/windows-amd64/*
+    - run: GOOS=darwin GOARCH=amd64 go build -o build/darwin-amd64/aws-keyhub && zip -j release/aws-keyhub-darwin-amd64.zip build/darwin-amd64/*
+    - run: GOOS=darwin GOARCH=arm64 go build -o build/darwin-arm64/aws-keyhub && zip -j release/aws-keyhub-darwin-arm64.zip build/darwin-arm64/*  
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         draft: true
         files: |
-          release/*
+          release/**/*
